# mc2

./: .clang-format  .gitignore  .gitmodules  1  CMakeLists.txt  README.md  TODO  mctidy.md
.github/workflows/: build.yml
GameOS/gameos/: CMakeLists.txt  gameos.cpp  gameos_debugging.cpp  gameos_fileio.cpp  gameos_graphics.cpp  gameos_graphics_debug.cpp  gameos_input.cpp  gameos_res.cpp  gameos_sound.cpp  gameosmain.cpp  gos_font.cpp  gos_font.h  gos_input.cpp  gos_input.h  gos_render.cpp  gos_render.h
GameOS/gameos/utils/: Image.cpp  Image.h  camera.cpp  camera.h  file_utils.cpp  file_utils.h  gl_render_constants.cpp  gl_render_constants.h  gl_utils.cpp  gl_utils.h  graphics.h  logging.cpp  logging.h  matrix.cpp  matrix.h  render_constants.h  shader_builder.cpp  shader_builder.h  stream.cpp  stream.h  string_utils.cpp  string_utils.h  vec.cpp  vec.h
GameOS/include/: 3drasterizer.hpp  debugger.hpp  dxrasterizer.hpp  gameos.hpp  memorymanager.hpp  music.hpp  platform_str.h  platform_tchar.h  platform_windows.h  toolos.hpp
GameOS/src/: platform_mmsystem.cpp  platform_winbase.cpp
Viewer/: CMakeLists.txt  View.cpp
code/: actor.h  artlry.cpp  artlry.h  bldng.cpp  bldng.h  collsn.cpp  collsn.h  comndr.cpp  comndr.h  dradio.h  dtacordr.h  dteam.h  dterrobj.h  dturret.h  dwarrior.h  dweaponbolt.h  gameobj.h  goal.cpp  goal.h  infowindow.cpp  infowindow.h  light.cpp  light.h  logisticsdata.cpp  logisticsdata.h  logisticsdialog.cpp  logisticsdialog.h  logisticserrors.h  logisticsmissioninfo.cpp  logisticsmissioninfo.h  logmain.cpp  mainmenu.cpp  mainmenu.h  mechcmd2.cpp  mission2.cpp  mpprefs.cpp  mpstats.cpp  objective.cpp  objtype.cpp  objtype.h  (+21 more)
data_scripts/: README.md  config.mk  fonts.mk  fst.mk  movie.mk  object.mk  other.mk  sound.mk  tgl.mk  tgl.rsp
data_tools/: CMakeLists.txt  aseconv.cpp  common.hpp  makefst.cpp  makersp.cpp  pak.cpp
gui/: aanim.cpp  aanim.h  aanimobject.cpp  aanimobject.h  abutton.cpp  abutton.h  aedit.cpp  aedit.h  afont.cpp  afont.h  alistbox.cpp  alistbox.h  ascroll.cpp  ascroll.h  asystem.cpp  asystem.h  logisticsscreen.cpp  logisticsscreen.h
include/glad/: gl.c  gl.h
mclib/: CMakeLists.txt  abl.h  abldbug.cpp  abldbug.h  abldecl.cpp  ablenv.cpp  ablenv.h  ablparse.h  ablscan.h  appear.cpp  appear.h  apprtype.cpp  apprtype.h  bdactor.h  bitflag.h  celement.cpp  celement.h  cepane.cpp  cepane.h  cevfx.h  clouds.cpp  clouds.h  cmponent.cpp  cmponent.h  crater.cpp  crater.h  csvfile.h  dbasegui.h  debugging.cpp  debugging.h  dffile.h  dfile.h  dheap.h  dident.h  dinifile.h  dquad.h  dstd.h  dvertex.h  echarstring.cpp  elist.h  (+55 more)
mclib/gosfx/: card.cpp  card.hpp  debriscloud.cpp  debriscloud.hpp  effect.cpp  effect.hpp  singleton.cpp  singleton.hpp  tube.cpp  tube.hpp
mclib/mlr/: CMakeLists.txt  gosimage.cpp  gosimage.hpp  gosimagepool.cpp  gosimagepool.hpp  gospoint.cpp  gospoint.hpp  gosvertex.cpp  gosvertex.hpp  gosvertex2uv.hpp  mlrclipper.cpp  mlrclippingstate.hpp  mlrheaders.hpp  mlrindexedpolymesh.cpp  mlrindexedprimitive.cpp  mlrpolymesh.cpp  mlrprimitive.cpp  mlrstate.hpp  mlrtexturepool.cpp
mclib/stuff/: affinematrix.cpp  affinematrix.hpp  angle.cpp  angle.hpp  angle_test.cpp  armorheap.hpp  armoroff.hpp  armoron.hpp  database.cpp  filestream.cpp  filestream.hpp  filestream_test.cpp  filestreammanager.cpp  filestreammanager.hpp  hash.cpp  hash.hpp  hash_test.cpp  matrix.cpp  matrix.hpp  obb.cpp  obb.hpp  rotation.cpp  rotation.hpp  scalar.hpp  stuff.hpp  style.cpp  style.hpp  tree.cpp  tree.hpp  unitvector.cpp  unitvector.hpp  vector4d.cpp  vector4d.hpp
res/: CMakeLists.txt  libmain.cpp
shaders/: gos_tex_vertex_lighted.frag  gos_tex_vertex_lighted.vert  gos_text.frag  gos_vertex_lighted.frag  gos_vertex_lighted.vert
test_scripts/: main.cpp
test_scripts/res_conv/: strings.res.cpp  strings.res.h
test_sound/: check_bad_files.cpp  playmus.c  playwave.c
text_tool/: CMakeLists.txt  main.cpp
